# asnp

./: .gitignore  Makefile  README  README.md  assemble.cpp  assemble.h  main.cpp
data/: bios.S  n16r.arch  n16r.arch.yaml  oper_AND.S  subleq.arch  subleq.arch.yaml  test.S
data/bios/: bios.S  monitor.S  test.S  utils.S
data/bios/driver/: serial.S
data/bios/drivers/: serial.S
data/bios/nest/: test.S
src/: CMakeLists.txt  arch.cpp  arch.h  assemble.cpp  assemble.h  error.h  main.cpp  segment.cpp  segment.h  token.h
src/as/: CMakeLists.txt  arch.cpp  arch.h  assemble.cpp  assemble.h  main.cpp  segment.cpp  segment.h  token.cpp  token.h
src/ld/: CMakeLists.txt  linker.cpp  linker.h  main.cpp
src/libelf/: CMakeLists.txt  elf.cpp  elf.h
test/: oper_AND.S
